Wed Sep  9 02:48:44 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: added -posix check for NeXTStep

	* gtk/testthreads.c: applied part of gtk-joke-980907-0 to use
	a unique buffer for each thread.

	* docs/gtk-config.1: clarified copyright

Tue Sep  8 05:19:51 1998  Tim Janik  <timj@gtk.org>

	* gdk/gdk.c (gdk_init): use g_atexit() instead of ATEXIT.

	* gtk/gtkmain.c (gtk_init): use g_atexit() instead of ATEXIT.

	* gtk/gtkobject.c (gtk_object_init_type): use g_atexit() instead of
	ATEXIT.
	
	* ltconfig: use GLib's ltconfig which honours lcc.

Mon Sep  7 20:09:23 PDT 1998 Manish Singh <yosh@gimp.org>

	* configure.in: comment the -std1 check and save LIBS properly

Sun Sep  6 12:36:23 PDT 1998 Manish Singh <yosh@gimp.org>

	* gtk/testrgb.c: #include <stdlib.h>

Sat Sep  5 16:01:19 1998  Owen Taylor  <otaylor@gtk.org>

	* gdk/gdkinputxfree.h gdk/gdk.c gdk/gdkinputgxi.h:
	When the pointer is grabbed on an input window,
	either explicitely, or through press-grab, and
	then grabbed on a non-input window, ungrab the
	devices.

Sat Sep  5 07:13:19 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtktypeutils.h: don't include any gdk headers.
	added structure definitions for GtkTypeObject and GtkTypeClass,
	which cover the very basic fields of GtkObject and GtkObjectClass,
	which are actually used by the type system.
	
	* gtk/gtktypeutils.c: don't include gtkobject.h or gtkcontainer.h,
	we only refer to our own structures. improved class inheritance
	sanity checking a bit.

	* gtk/gtkobject.h: placed appropriate comments at the beginnings
	of the GtkObject and GtkObjectClass structures, which explain
	their relationship to GtkTypeObject and GtkTypeClass.

	* gtk/gtktypeutils.h:
	* gtk/gtkobject.h:
	moved GTK_STRUCT_OFFSET(), GTK_CHECK_CAST(), GTK_CHECK_CLASS_CAST(),
	GTK_CHECK_TYPE() and GTK_CHECK_CLASS_TYPE() macro definitions from
 	gtkobject.h to gtktypeutils.h.

	* gtk/gtkobject.h:
	* gtk/gtkobject.c:
	removed gtk_object_check_cast() and gtk_object_check_class_cast()